# Rust-Studies

./: Cargo.toml
src/: ownership.rs
src/algorithms/: fizzbuzz.rs  is_sym_tree.rs  nth_fibo.rs
src/chip8/: emulator.rs
src/data_structures/: binary_tree.rs  linked_list.rs  stack.rs
src/sorting/: bubble_sort.rs  insertion_sort.rs  utils.rs
src/syntax/: array.rs  as_ref.rs  debug_attribute.rs  iter_string.rs  lifetime.rs  loop.rs  macros.rs  match.rs  mutable.rs  oop.rs  option.rs  ownership.rs  pointer.rs  read_file.rs  readme.txt  ref_and_borrowing.rs  str_to_string.rs  trait.rs  tuple.rs  tuple_struct.rs  type_conv.rs
src/syntax/module/: hello.rs  main.rs
src/syntax/module/folder/: car.rs  mod.rs
tests/: unittest.rs
